[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "crypto-toolkit"
version = "1.0.0"
description = "Toolkit de Criptografía — Cifrado, hashing, análisis de contraseñas. Uso educativo."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Shadow-King-Cyber"},
]
dependencies = [
    "click>=8.1",
    "jinja2>=3.1",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
crypto-toolkit = "crypto_toolkit.ui.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
